--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
-Django
-Pillow
-django-crispy-forms
-crispy-bootstrap5
-django-ckeditor
-python-decouple
-whitenoise
-gunicorn
+asgiref==3.8.1
+crispy-bootstrap5==2025.6
+Django==5.2.3
+django-ckeditor-5==0.2.18
+django-crispy-forms==2.4
+django-js-asset==3.1.2
+gunicorn==23.0.0
+packaging==25.0
+pillow==11.2.1
+python-decouple==3.8
+sqlparse==0.5.3
+typing_extensions==4.14.0
+tzdata==2025.2
+whitenoise==6.9.0
