--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.8.1
 crispy-bootstrap5==2025.6
+dj-database-url==3.0.0
 Django==5.2.3
 django-ckeditor-5==0.2.18
 django-crispy-forms==2.4
