--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-js-asset==3.1.2
 gunicorn==23.0.0
 packaging==25.0
 pillow==11.2.1
+psycopg2-binary==2.9.10
 python-decouple==3.8
 sqlparse==0.5.3
 typing_extensions==4.14.0
